responsive styles fix and alignment on desktop

--- a/styles.css
+++ b/styles.css
@@ -1248,8 +1248,9 @@ FUN WITH FORMS
 
 #hsuforum-loading-container {
     display: block;
+    position: relative;
     margin: auto auto -280px;
-    width: inherit;
+    width: 50%;
     border: 1px solid dimgrey;
     border-radius: 4px;
     padding: 10px;
@@ -1290,12 +1291,6 @@ FUN WITH FORMS
     z-index: 998;
 }
 
-#hsuforum-overlay-fixed {
-    position: fixed;
-    width: 50%;
-    z-index: 999;
-}
-
 @media only screen and (max-width: 500px){
   #hsuforum-loading-container {
     width: 70%;
@@ -1311,4 +1306,36 @@ FUN WITH FORMS
         transform: rotate(360deg);
     }
 }
+
+/* CTED-1486 add fix div around loader and responsive */
+#hsuforum-overlay-fixed {
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 9999;
+    width: 50%;
+    margin: auto 32%;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px){
+#hsuforum-overlay-fixed {
+    width: 67%;
+ }
+}
+
+@media only screen and (max-width: 500px){
+#hsuforum-overlay-fixed {
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 9999;
+    width: 100%;
+    margin: 0 auto; 
+ }
+}
+
 
